<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/status_test_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="1"
            android:stretchColumns="0" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/header_test_name"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/header_test_status"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/header_test_more"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#DDDDDD" />

            <!-- 1 -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/title_test"
                    android:layout_width="0dp"
                    android:text="@string/test_title_build_parameters"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/indicator_test1"
                    android:layout_gravity="center" />

                <Button
                    style="@android:style/TextAppearance.Small"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:onClick="manageTest1"
                    android:text="@string/btn_test_more" />
            </TableRow>
            <!-- 2 -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/title_test"
                    android:layout_width="0dp"
                    android:text="@string/test_title_operations_by_bitlength"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/indicator_test2"
                    android:layout_gravity="center" />

                <Button
                    style="@android:style/TextAppearance.Small"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:onClick="manageTest2"
                    android:text="@string/btn_test_more" />
            </TableRow>
            <!-- 3 -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/title_test"
                    android:layout_width="0dp"
                    android:text="@string/test_title_crypto_operations"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/indicator_test3"
                    android:layout_gravity="center" />

                <Button
                    style="@android:style/TextAppearance.Small"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:onClick="manageTest3"
                    android:text="@string/btn_test_more" />
            </TableRow>
            <!-- 4 -->

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip" >

                <TextView
                    android:id="@+id/title_test"
                    android:layout_width="0dp"
                    android:text="@string/test_title_adding_times"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <ImageView
                    android:id="@+id/indicator_test4"
                    android:layout_gravity="center" />

                <Button
                    style="@android:style/TextAppearance.Small"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:onClick="manageTest4"
                    android:text="@string/btn_test_more" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#F2F2F2"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/presence_online"
                android:padding="5dp"
                android:text="@string/done" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/presence_away"
                android:padding="5dp"
                android:text="@string/working" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/presence_offline"
                android:padding="5dp"
                android:text="@string/no_started" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>