<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/s_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:ems="10"
                android:hint="@string/S_Value"
                android:inputType="number"/>

            <EditText
                android:id="@+id/bitLength_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:hint="@string/BitLength_Value"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_secure"
            android:drawableRight="@android:drawable/ic_secure"
            android:onClick="createParameters"
            android:text="@string/make_Param"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_value" />

            <EditText
                android:id="@+id/val1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/val1_desencriptado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second_value" />

            <EditText
                android:id="@+id/val2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" >
            </EditText>

            <TextView
                android:id="@+id/val2_desencriptado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale_value" />

            <EditText
                android:id="@+id/valEscalar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="calc"
            android:text="@string/calc_action" />

        <TextView
            android:id="@+id/result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#DDDD00"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/resumenData"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#DDDDCC"
            android:visibility="gone" />

        <!-- Loading -->

        <RelativeLayout
            android:id="@+id/loadingPanel"
            style="@style/GenericProgressBackground"
            android:visibility="gone" >

            <ProgressBar style="@style/GenericProgressIndicator" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>